--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -219,7 +219,7 @@ target_include_directories(
 target_link_libraries(
     gammaray_core
     PUBLIC gammaray_common
-    PRIVATE gammaray_common_internal
+    PRIVATE $<BUILD_INTERFACE:gammaray_common_internal>
             gammaray_kitemmodels
             ${CMAKE_DL_LIBS}
             Qt::CorePrivate
@@ -246,53 +246,49 @@ endif()
 
 add_backward(gammaray_core)
 
-if(NOT GAMMARAY_PROBE_ONLY_BUILD)
-    install(
-        TARGETS gammaray_core
-        EXPORT GammaRayTargets
-        ${INSTALL_TARGETS_DEFAULT_ARGS}
-    )
+install(
+    TARGETS gammaray_core
+    EXPORT GammaRayTargets
+    ${INSTALL_TARGETS_DEFAULT_ARGS}
+)
 
-    gammaray_install_headers(
-        ${CMAKE_CURRENT_BINARY_DIR}/gammaray_core_export.h
-        enumrepositoryserver.h
-        enumutil.h
-        metaobject.h
-        metaobjectrepository.h
-        metaproperty.h
-        objectmodelbase.h
-        objectdataprovider.h
-        objecttypefilterproxymodel.h
-        probe.h
-        probecontroller.h
-        propertycontroller.h
-        propertycontrollerextension.h
-        signalspycallbackset.h
-        singlecolumnobjectproxymodel.h
-        toolfactory.h
-        typetraits.h
-        util.h
-        varianthandler.h
-        remote/server.h
-    )
+gammaray_install_headers(
+    ${CMAKE_CURRENT_BINARY_DIR}/gammaray_core_export.h
+    enumrepositoryserver.h
+    enumutil.h
+    metaobject.h
+    metaobjectrepository.h
+    metaproperty.h
+    objectmodelbase.h
+    objectdataprovider.h
+    objecttypefilterproxymodel.h
+    probe.h
+    probecontroller.h
+    propertycontroller.h
+    propertycontrollerextension.h
+    signalspycallbackset.h
+    singlecolumnobjectproxymodel.h
+    toolfactory.h
+    typetraits.h
+    util.h
+    varianthandler.h
+    remote/server.h
+)
 
-    ecm_generate_pri_file(
-        BASE_NAME
-        GammaRayCore
-        LIB_NAME
-        gammaray_core-${GAMMARAY_PROBE_ABI}
-        DEPS
-        "core gui GammaRayCommon"
-        FILENAME_VAR
-        PRI_FILENAME
-        INCLUDE_INSTALL_DIR
-        ${INCLUDE_INSTALL_DIR}
-    )
+ecm_generate_pri_file(
+    BASE_NAME
+    GammaRayCore
+    LIB_NAME
+    gammaray_core-${GAMMARAY_PROBE_ABI}
+    DEPS
+    "core gui GammaRayCommon"
+    FILENAME_VAR
+    PRI_FILENAME
+    INCLUDE_INSTALL_DIR
+    ${INCLUDE_INSTALL_DIR}
+)
 
-    install(FILES ${PRI_FILENAME} DESTINATION ${ECM_MKSPECS_INSTALL_DIR})
-else()
-    install(TARGETS gammaray_core ${INSTALL_TARGETS_DEFAULT_ARGS})
-endif()
+install(FILES ${PRI_FILENAME} DESTINATION ${ECM_MKSPECS_INSTALL_DIR})
 if(GAMMARAY_STATIC_PROBE)
     gammaray_install_headers(staticprobe.h)
 endif()
