--- a/plugins/network/CMakeLists.txt
+++ b/plugins/network/CMakeLists.txt
@@ -32,8 +32,15 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
         gammaray_network.json
         SOURCES
         ${gammaray_network_srcs}
+        EXPORT
+        GammaRayTargets
     )
-    target_link_libraries(gammaray_network gammaray_core Qt::Network Qt::CorePrivate)
+    target_link_libraries(gammaray_network PUBLIC gammaray_core)
+    target_link_libraries(
+        gammaray_network
+        PUBLIC Qt::Network
+        PRIVATE Qt::CorePrivate
+    )
     set_target_properties(gammaray_network PROPERTIES DISABLE_PRECOMPILE_HEADERS ON)
 endif()
 
