--- a/plugins/quickwidgetsupport/CMakeLists.txt
+++ b/plugins/quickwidgetsupport/CMakeLists.txt
@@ -16,6 +16,12 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
         gammaray_quickwidgetsupport.json
         SOURCES
         ${gammaray_quickwidgetsupport_srcs}
+        EXPORT
+        GammaRayTargets
     )
-    target_link_libraries(gammaray_quickwidgetsupport gammaray_core Qt::QuickWidgets)
+    target_link_libraries(
+        gammaray_quickwidgetsupport
+        PUBLIC gammaray_core
+    )
+    target_link_libraries(gammaray_quickwidgetsupport PUBLIC Qt::QuickWidgets)
 endif()
