--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -195,7 +195,9 @@ target_include_directories(
 target_link_libraries(
     gammaray_ui
     PUBLIC Qt::Core Qt::Gui Qt::Widgets gammaray_common
-    PRIVATE gammaray_common_internal gammaray_kitemmodels Qt::WidgetsPrivate
+    PRIVATE $<BUILD_INTERFACE:gammaray_common_internal>
+            gammaray_kitemmodels
+            Qt::WidgetsPrivate
 )
 if(TARGET KF${QtCore_VERSION_MAJOR}::SyntaxHighlighting)
     target_link_libraries(gammaray_ui PRIVATE KF${QtCore_VERSION_MAJOR}::SyntaxHighlighting)
@@ -226,7 +228,7 @@ target_link_libraries(
     Qt::Gui
     Qt::Widgets
     Qt::GuiPrivate
-    gammaray_common_internal
+    $<BUILD_INTERFACE:gammaray_common_internal>
     gammaray_ui
     gammaray_kitemmodels
 )
