--- a/plugins/codecbrowser/CMakeLists.txt
+++ b/plugins/codecbrowser/CMakeLists.txt
@@ -17,10 +17,11 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
         gammaray_codecbrowser.json
         SOURCES
         ${gammaray_codecbrowser_plugin_srcs}
+        EXPORT GammaRayTargets
     )
     set_target_properties(gammaray_codecbrowser_plugin PROPERTIES DISABLE_PRECOMPILE_HEADERS ON)
-
-    target_link_libraries(gammaray_codecbrowser_plugin gammaray_core)
+    target_link_libraries(gammaray_codecbrowser_plugin PUBLIC gammaray_core)
+    target_link_libraries(gammaray_codecbrowser_plugin PUBLIC Qt::Core)
 endif()
 
 # ui part
