--- a/plugins/widgetinspector/CMakeLists.txt
+++ b/plugins/widgetinspector/CMakeLists.txt
@@ -36,15 +36,16 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
         gammaray_widgetinspector.json
         SOURCES
         ${gammaray_widgetinspector_plugin_srcs}
+        EXPORT
+        GammaRayTargets
     )
 
     target_link_libraries(
         gammaray_widgetinspector_plugin
-        Qt::Gui
-        Qt::Widgets
-        gammaray_kitemmodels
-        gammaray_core
+        PUBLIC gammaray_core
+        PRIVATE gammaray_kitemmodels
     )
+    target_link_libraries(gammaray_widgetinspector_plugin PUBLIC Qt::Gui Qt::Widgets)
 endif()
 
 # probe export actions
